Updated info in README and multiprocess

--- a/preprocessing_aws_multiprocess.ipynb
+++ b/preprocessing_aws_multiprocess.ipynb
@@ -23,7 +23,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "%matplotlib inline\n",
     "\n",
     "import numpy as np # linear algebra\n",
@@ -114,7 +113,7 @@
     "def multipreprocess_aws(patients, num_processes, path, savepath):\n",
     "    #Cutting up the processes and then sorting them by size. We want the larger jobs first to optimize workflow.\n",
     "     jobs = []\n",
-    "    patients = sorted(chunkIt(patients, num_processes), key=lambda chunk:-len(chunk)) #USE NUMPY ARRAY_SPLIT INSTEAD\n",
+    "    patients = sorted(chunkIt(patients, num_processes), key=lambda chunk:-len(chunk))#USE NUMPY ARRAY_SPLIT INSTEAD, this is needlessly complicated, and also fails for certain combinations.\n",
     "    print(patients, '\\n')\n",
     "    for i in range(num_processes):\n",
     "        print('Process ', i+1, ': ', patients[i], '\\n')\n",
@@ -1529,7 +1528,30 @@
     "print(set(patients_full) - set(pp_patients_full))\n",
     "\n",
     "# missing 'd104e584e51830ea51ee60e69186f83b'\n",
-    "#multipreprocess_aws(['d104e584e51830ea51ee60e69186f83b'], 1, path, savepath)"
+    "#multipreprocess_aws(['d104e584e51830ea51ee60e69186f83b'], 1, path, savepath)\n",
+    "\n",
+    "#Preprocessing is complete"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing Tests\n",
+    "\n",
+    "Below code is a sandbox where I played around with multiprocessing.\n",
+    "\n",
+    "For smaller dataset `sample_images`, here are the times it took to preprocess all 20 sample patients.\n",
+    "\n",
+    "* 2 processes on 4 CPU c4.xlarge: 6m 47s\n",
+    "* 4 processes on 4 CPU c4.xlarge: 4m 29s\n",
+    "* 6 processes on 4 CPU c4.xlarge: 3m 40s\n",
+    "* 8 processes on 8 CPU c4.2xlarge: 2m 09s\n",
+    "\n",
+    "For the first fifty images (by path name) in `stage_1` full dataset:\n",
+    "\n",
+    "* 10 processes on 8CPU c4.2xlarge: 4m 45s\n",
+    "* 14 processes on 8CPU c4.2xlarge: 4m 14s "
    ]
   },
   {
