--- a/preprocessing_aws.ipynb
+++ b/preprocessing_aws.ipynb
@@ -378,7 +378,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "#Compare vs time to read all slices in native dicom format\n",
+    "#Time it takes to read .npy from S3\n",
     "\n",
     "count = 0\n",
     "\n",
