Modified PP_AWS_multi notebook

--- a/preprocessing_aws_multiprocess.ipynb
+++ b/preprocessing_aws_multiprocess.ipynb
@@ -1462,21 +1462,8 @@
    ],
    "source": [
     "#Multiprocessing here\n",
-    "patients = patients_full[428:] #starting where we left off\n",
-    "print(patients_full[427], patients[0])\n",
     "\n",
-    "#jobs = multipreprocess_aws(patients, 12, path, savepath)\n",
-    "\n",
-    "#Fix oops somehow error with process 7 and 10\n",
-    "#  Last one for 7: Process  7 :  91  out of  97  completed. 933cc0dec1c737d9654820453ce64284\n",
-    "unproc_7_patients = ['934bc93ae41ee1d98c7c44d483327f8d', '934f01786c3bdf8eeaf7d8411a3a8f82', '935908ab6e4c329756638887f2dedca2', '9397a41c9e819a92eb5c86e0e652d7c1', '93a6f37a72f60498986374f57bfc30c4', '93b60dbb5cc3fa4c4cc9247cb1143a09'] #unprocessed patients of process 7 #last one was \n",
-    "# Last one for 10: Process  10 :  91  out of  97  completed. d032116d73789ff9c805f493357b4037\n",
-    "unproc_10_patients = ['d08383958039c53ea3347ce1719be43e', 'd09e4124b97b22ef45692b62b4ca7f03', 'd0baf38ff8d974e7b59c23fd43713de9', 'd0c1c175814c610bc333080152a605f7', 'd0c86e0c3b3fe3e1dd936b7553ecc29c', 'd104e584e51830ea51ee60e69186f83b'] \n",
-    "\n",
-    "unproc_patients = unproc_7_patients + unproc_10_patients\n",
-    "\n",
-    "sorted(chunkIt(unproc_patients, 10))\n",
-    "#jobs = multipreprocess_aws(unproc_7_patients + unproc_10_patients, 10, path, savepath) #Fixing this"
+    "jobs = multipreprocess_aws(patients, 12, path, savepath)"
    ]
   },
   {
